# VoiceDeck

./: .gitignore  README.md  VoiceDeck.spec  config.example.toml  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: voicedeck.icns
debian/: voicedeck.desktop
scripts/: build.py  build_binary.sh  build_deb.sh  generate_icons.py
voicedeck/: __init__.py  config.py  keyring_storage.py  main.py
voicedeck/audio/: __init__.py  recorder.py  vad_recorder.py
voicedeck/gui/: __init__.py  hotmic_panel.py  main_window.py  settings_dialog.py  styles.py
voicedeck/gui/widgets/: __init__.py  led_indicator.py  level_meter.py  record_button.py  session_selector.py
voicedeck/integrations/: claude_grid.py  session_matcher.py
voicedeck/stt/: __init__.py  base.py  openai_client.py
